# crmcore

./: .ai-rules.md  .gitignore  AI_Sales_Copilot_PRD.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml  justfile  pyproject.toml
.claude/: settings.json
.claude/agents/: architect.md  backend.md  designer.md  frontend.md  infrastructure.md  orchestrator.md  plan-reviewer-arch.md  plan-reviewer-backend.md  plan-reviewer-frontend.md  security.md  test-pm.md  test-writer.md  tester.md
.claude/commands/: analyze.md  generate-tests.md  implement.md  plan.md  remember.md  review-plan.md  setup.md  specify.md  verify.md
.claude/hooks/: HOOK_CONTRACT.md  check_docs_update.py  context_monitor.py  environment_checker.py  file_checker_python.py  rules_supervisor.py  security_guard.py  skill-enforcer.sh  tdd_enforcer.py  version_bump_reminder.py
.claude/memory/: feat-001-context-stuffing.md  feat-002-audio-pipeline-fix.md  feat-003-dedup-hints-ui.md  feat-007-side-panel-migration.md  learnings.md
.claude/reviews/: REVIEW_ARCHITECT_FEAT008.md  REVIEW_ARCHITECT_FEAT009.md  REVIEW_BACKEND_FEAT008.md  REVIEW_BACKEND_FEAT009.md  REVIEW_CONSOLIDATED_FEAT008.md  REVIEW_CONSOLIDATED_FEAT009.md  REVIEW_FRONTEND_FEAT008.md  REVIEW_FRONTEND_FEAT009.md
.claude/rules/standard/: coding-standards.md  documentation-sync.md  git-operations.md  tdd-enforcement.md  trunk-leaves-architecture.md  verification-standards.md  workflow-enforcement.md
.claude/skills/architect-standards/: SKILL.md
.claude/skills/architecture-review/: SKILL.md
.claude/skills/auto-loop/: SKILL.md
.claude/skills/backend-api-standards/: SKILL.md
.claude/skills/backend-migration-standards/: SKILL.md
.claude/skills/backend-models-standards/: SKILL.md
.claude/skills/backend-python/: SKILL.md
.claude/skills/backend-queries-standards/: SKILL.md
.claude/skills/devops-standards/: SKILL.md
.claude/skills/e2e-agent-browser/: SKILL.md
.claude/skills/frontend-react/: SKILL.md
.claude/skills/interface-design/: SKILL.md
.claude/skills/logging-loguru/: SKILL.md
backend/: .env.example  Dockerfile  config.py  errors.py  logger.py  main.py  pyproject.toml
backend/api/: briefing.py  evaluation.py  health.py  session.py  summarize.py  upload.py
backend/briefing/: models.py
backend/ingestion/: chunker.py  parser.py
backend/pipeline/: audio.py  audio_buffer.py  evaluation_runner.py  evaluation_schemas.py  evaluator.py  evaluator_llm.py  llm.py  orchestrator.py  post_call.py  prompt_formatter.py  protocols.py  scenario.py  schemas.py  shared_llm.py  stt.py  talk_ratio.py  types.py  vad.py  yandex_async.py
backend/pipeline/salutespeech/: recognition.proto  recognition_pb2.py  recognition_pb2_grpc.py  task.proto  task_pb2.py  task_pb2_grpc.py
backend/pipeline/yandexstt/: stt.proto  stt_pb2.py  stt_pb2_grpc.py
backend/pipeline/yandexstt_async/google/api/: annotations_pb2.py  annotations_pb2_grpc.py  http_pb2.py  http_pb2_grpc.py
backend/pipeline/yandexstt_async/yandex/cloud/: validation_pb2.py  validation_pb2_grpc.py
backend/pipeline/yandexstt_async/yandex/cloud/ai/stt/v3/: stt_pb2.py  stt_pb2_grpc.py  stt_service_pb2.py  stt_service_pb2_grpc.py
backend/pipeline/yandexstt_async/yandex/cloud/api/: operation_pb2.py  operation_pb2_grpc.py
backend/pipeline/yandexstt_async/yandex/cloud/operation/: operation_pb2.py  operation_pb2_grpc.py
backend/session/: manager.py
backend/storage/: __init__.py  keys.py  protocol.py  redis_store.py
backend/summarize/: call_summary.py
backend/tests/: conftest.py  test_audio.py  test_audio_buffer.py  test_briefing.py  test_edge_cases.py  test_error_frames.py  test_evaluation_api.py  test_evaluation_integration.py  test_evaluation_runner.py  test_evaluation_schemas.py  test_evaluator.py  test_evaluator_analytics.py  test_evaluator_llm.py  test_health.py  test_ingestion.py  test_llm.py  test_orchestrator_diarization.py  test_orchestrator_edge_cases.py  test_orchestrator_eval.py  test_pipeline.py  test_post_call.py  test_prompt_formatter.py  test_prompt_formatter_diarization.py  test_protocols.py  test_redis_none.py  test_salutespeech_mic.py  test_salutespeech_synthetic.py  test_scenario.py  test_schemas.py  test_session_manager_eval.py  test_shared_llm.py  test_storage.py  test_stt.py  test_talk_ratio.py  test_types.py  test_upload.py  test_websocket.py  test_ws_handler.py  test_ws_synthetic.py  test_yandex_async.py  (+1 more)
backend/tests/fixtures/: make_fixtures.py  sample.docx  sample.xlsx
backend/ws/: handler.py
briefing/: portrait.py
docs/: AI_Sales_Copilot_Brief_Panel_Spec.md  AI_Sales_Copilot_Live_Call_Spec.md  ARCHITECTURE.md  AUDIO_FLOW_ANALYSIS.md  DEMO_PREFLIGHT.md  DEMO_SCRIPT.md  PHASE2_ROADMAP.md  SALUTESPEECH_MULTI_UTTERANCE_FIX.md  SALUTESPEECH_REVIEW.md  SALUTESPEECH_TESTING.md  STRUCTURE.md  architecture-review-2026-03-14.md  extension-issues.md  repo-stats.md
docs/plans/: 2026-02-27-living-specs-design.md  2026-02-28-ai-sales-copilot-design.md  2026-02-28-ai-sales-copilot-plan.md  2026-03-01-glue-integration.md  2026-03-08-side-panel-migration-design.md  2026-03-11-dedup-hints-ui.md  2026-03-14-backend-arch-fixes.md  2026-03-14-frontend-arch-fixes.md  FEAT-001-context-stuffing-pipeline.md  FEAT-001-living-specs.md  FEAT-002-audio-pipeline-fix.md  FEAT-003-extension-ui-redesign.md  FEAT-004-ux-polish-settings-progress-audio.md  FEAT-007-side-panel-migration.md
extension/: manifest.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vite.worklet.config.ts  vitest.config.ts
extension/src/: audio-worklet.ts
scripts/: copy-to-project.sh  generate_yandex_async_proto.sh  health_check.py  install-tools.sh
specs/: FEAT-001-context-stuffing-pipeline.md  FEAT-002-extension-redesign.md  FEAT-003-extension-ui-redesign.md  FEAT-005-extension-bugfixes.md  FEAT-007-side-panel-migration.md  FEAT-008-backend-arch-fixes.md  FEAT-009-frontend-arch-fixes.md  FEAT-012-brief-panel-redesign.md  FEAT-012-sgr-contract.md  registry.md
test_data/: client_brief.md
tests/e2e/: extension.e2e.mjs  package-lock.json  package.json
(+84 files in other folders)
